fix sass linting issue

--- a/src/styles/components/_email-form.scss
+++ b/src/styles/components/_email-form.scss
@@ -52,7 +52,7 @@
             width: 325px;
             height: 50px;
             position: absolute;
-            left: calc(50% -162px);
+            left: calc(50% - 162px);
             top: 215px;
             padding-top: 0;
 
@@ -148,7 +148,7 @@
         pointer-events: auto;
         width: 320px;
         position: relative;
-        left: calc(50% -160px);
+        left: calc(50% - 160px);
         padding-top: 16px;
 
         input {
@@ -199,7 +199,7 @@
         letter-spacing: 0.01em;
         position: relative;
         width: 320px;
-        left: calc(50% -160px);
+        left: calc(50% - 160px);
         font-family: "Calibre-Regular", sans-serif;
     }
 }
