--- a/server/api/views/templates/BookmarkEmail/html.ejs
+++ b/server/api/views/templates/BookmarkEmail/html.ejs
@@ -45,24 +45,24 @@
 				  <tr>
 					<td width="50%" dir="ltr" class="w100 text-center logos__barnes-logo" style="text-align: left; padding: 20px 0;">
 					  <a href="https://collection.barnesfoundation.org" target="_blank">
-						<%= image_tag "mailer/barnes_email_logo_red.png", alt: "Barnes", width: "200px" %>
+						<img src="mailer/barnes_email_logo_red.png" alt="Barnes" width="200px">
 					  </a>
 					</td>
 					<td width="50%" dir="ltr" class="w100 text-center logos__social-icons" style="text-align: right;">
 					  <a href="https://www.facebook.com/barnesfoundation/" target="_blank">
-						<%= image_tag "mailer/social_facebook.png", alt: "facebook", width: "20px", height: "20px", style: "padding: 20px 10px; opacity: 0.8;" %>
+						<img src="mailer/social_facebook.png" alt="facebook", width="20px" height="20px", style="padding: 20px 10px; opacity: 0.8;">
 					  </a>
 					  <a href="https://www.instagram.com/barnesfoundation/" target="_blank">
-						<%= image_tag "mailer/social_instagram.png", alt: "instagram", width: "20px", height: "20px", style: "padding: 20px 10px; opacity: 0.8;" %>
+						<img src="mailer/social_instagram.png" alt="instagram" width="20px" height="20px" style="padding: 20px 10px; opacity: 0.8;">
 					  </a>
 					  <a href="https://www.linkedin.com/company/barnes-foundation" target="_blank">
-						<%= image_tag "mailer/social_linkedin.png", alt: "linkedin", width: "20px", height: "20px", style: "padding: 20px 10px; opacity: 0.8;" %>
+						<img src="mailer/social_linkedin.png", alt="linkedin" width="20px" height="20px" style="padding: 20px 10px; opacity: 0.8;">
 					  </a>
 					  <a href="https://twitter.com/the_barnes" target="_blank">
-						<%= image_tag "mailer/social_twitter.png", alt: "twitter", width: "20px", height: "20px", style: "padding: 20px 10px; opacity: 0.8;" %>
+						<img src="mailer/social_twitter.png" alt="twitter" width="20px" height="20px" style="padding: 20px 10px; opacity: 0.8;">
 					  </a>
 					  <a href="https://www.youtube.com/user/BarnesFoundation" target="_blank">
-						<%= image_tag "mailer/social_youtube.png", alt: "Youtube", width: "20px", height: "20px", style: "padding: 20px 10px; opacity: 0.8;" %>
+						<img src="m%ailer/social_youtube.png", alt="Youtube" width="20px" height="20px" style="padding: 20px 10px; opacity: 0.8;">
 					  </a>
 					</td>
 				  </tr>
@@ -84,14 +84,14 @@
 				  <tr>
 					<td align="left" style="text-align: left; padding: 20px 0;">
 					  <p class="header" style="font-size: 40px;  margin: 10px 0; color: #282828;">
-						<%= @translations["Email"]["text_1"][:translated_content] %>
+						<%= translations["Email"]["text_1"][translated_content] %>
 					  </p>
 					</td>
 				  </tr>
 				  <tr>
 					<td align="left" style="text-align: left; padding: 20px 0;">
 					  <p style="font-size: 22px; color:#B6B6B6; margin: 10px 0;">
-						<%= @translations["Email"]["text_2"][:translated_content] %>
+						<%= translations["Email"]["text_2"][translated_content] %>
 					  </p>
 					  <p style="font-size: 22px; color:#B6B6B6; margin: 10px 0;">
 						Get more art in your inbox. <a href="http://www.pages03.net/thebarnesfoundation/EmailPreferences/curate_your_inbox">Sign up for Barnes emails</a> to stay on top of special offers and happenings all year round.
@@ -113,35 +113,38 @@
 				<td align="center" valign="top" width="500">
 				<![endif]-->
 				<table dir="ltr" cellpadding="0" cellspacing="0" border="0" style="width:100%; max-width:800px; color: #282828;font-size: 18px;" class="bookmarks-table">
-				  <% @els_arr.each do | els_elem | %>
+				  <% els_arr.forEach((els_elem) => { %>
 					<tr>
 					  <td width="30%" dir="ltr" class="w100 spacer" style="color: #282828; vertical-align: top; padding: 40px 0;">
-						<%= image_tag "https://barnes-images.imgix.net/" + els_elem['id'].to_s + "_" + els_elem['imageSecret'] + "_n.jpg?crop=faces,entropy&fit=crop&w=200&h=200", alt: els_elem['id'].to_s%>
+						<% const imageSource = `https://barnes-images.imgix.net/"${els_elem['id'].toString()}_${els_elem['imageSecret']}"_n.jpg?crop=faces,entropy&fit=crop&w=200&h=200" %>
+						<% const imageAlt = els_elem['id'].toString() %>
+						<img src=<%= imageSource %> alt=<%= imageAlt %>>
 					  </td>
 					  
 					  <td width="65%" dir="ltr" class="w100" style="color: #282828; vertical-align: top; padding: 18px 0 40px 0;">
 						<p>
-						  <%= link_to "https://collection.barnesfoundation.org/objects/#{els_elem['id'].to_s}/#{els_elem['title']}?utm_source=focus&utm_medium=email&utm_campaign=focus_scanned_object", :title => "barnes collection", :style => "color: #D6421F !important;" do %>
+							<% const objectHref=`"https://collection.barnesfoundation.org/objects/${els_elem['id'].toString()}/${els_elem['title']}?utm_source=focus&utm_medium=email&utm_campaign=focus_scanned_object` %>
+						  <a href=<%= objectHref %> title="Barnes Collection" style="color: #D6421F !important;">
 							<h3><%= els_elem['title'] %></h3>
-						  <% end %>
+						  </a>
 						</p>
   
-						<%= els_elem['people']%>. <%= els_elem['title']%>, <%=els_elem['displayDate']%>. <%=els_elem['medium']%>, <%=els_elem['dimensions'] %>. <%=els_elem['invno']%>
-						<% if els_elem['objRightsTypeID'].present? %>
-						  <% if ['1', '3'].include?(els_elem['objRightsTypeID']) %>
+						<%=els_elem['people']%>. <%= els_elem['title']%>, <%=els_elem['displayDate']%>. <%=els_elem['medium']%>, <%=els_elem['dimensions'] %>. <%=els_elem['invno']%>
+						<% if els_elem['objRightsTypeID'] %>
+						  <% if ['1', '3'].includes(els_elem['objRightsTypeID']) %>
 							<p>In Copyright. <br />
 							  <%= els_elem['creditLine'] %>
 							</p>
-						  <% elsif ['4', '8', '10'].include?(els_elem['objRightsTypeID']) %>
+						  <% else if ['4', '8', '10'].includes(els_elem['objRightsTypeID']) %>
 							<p>Public domain. </p>
-						  <% elsif ['2', '6'].include?(els_elem['objRightsTypeID']) %>
+						  <% else if ['2', '6'].includes(els_elem['objRightsTypeID']) %>
 							<p>Copyright Undetermined.</p>
 						  <% end %>
 						<% end %>
 					  </td>
 					</tr>
 					<tr><td colspan="2" style="border-top: 1px solid #eeeeee;"></td></tr>
-				  <% end %>
+				  <% }) %>
 				</table>
 				<!--[if (gte mso 9)|(IE)]>
 				</td>
@@ -181,19 +184,19 @@
 					</td>
 					<td align="center">
 					  <a href="https://www.facebook.com/barnesfoundation/" target="_blank">
-						  <%= image_tag "mailer/social_facebook.png", alt: "facebook", width: "20px", height: "20px", style: "padding: 20px 10px; opacity: 0.8;" %>
+						  <img src="mailer/social_facebook.png", alt="facebook" width="20px" height="20px" style="padding: 20px 10px; opacity: 0.8;">
 					  </a>
 					  <a href="https://www.instagram.com/barnesfoundation/" target="_blank">
-						  <%= image_tag "mailer/social_instagram.png", alt: "instagram", width: "20px", height: "20px", style: "padding: 20px 10px; opacity: 0.8;" %>
+						  <img src="mailer/social_instagram.png" alt="instagram" width="20px" height="20px", style="padding: 20px 10px; opacity: 0.8;">
 					  </a>
 					  <a href="https://www.linkedin.com/company/barnes-foundation" target="_blank">
-						  <%= image_tag "mailer/social_linkedin.png", alt: "linkedin", width: "20px", height: "20px", style: "padding: 20px 10px; opacity: 0.8;" %>
+						  <img src="mailer/social_linkedin.png" alt="linkedin" width="20px" height="20px" style="padding: 20px 10px; opacity: 0.8;">
 					  </a>
 					  <a href="https://twitter.com/the_barnes" target="_blank">
-						<%= image_tag "mailer/social_twitter.png", alt: "twitter", width: "20px", height: "20px", style: "padding: 20px 10px; opacity: 0.8;" %>
+						<img src="mailer/social_twitter.png", alt="twitter" width="20px" height="20px" style="padding: 20px 10px; opacity: 0.8;">
 					  </a>
 					  <a href="https://www.youtube.com/user/BarnesFoundation" target="_blank">
-						<%= image_tag "mailer/social_youtube.png", alt: "Youtube", width: "20px", height: "20px", style: "padding: 20px 10px; opacity: 0.8;" %>
+						<img src="mailer/social_youtube.png" alt="Youtube" width="20px" height="20px" style="padding: 20px 10px; opacity: 0.8;">
 					  </a>
 					</td>
 					<td>
@@ -249,15 +252,24 @@
 					</tr>
 					<tr>
 					  <td style="text-align: center; vertical-align: middle; padding-top: 10px;">
-						<div style="height:28px; color: #b8b8b8;"><a href="tel:215-278-7000">Call : 215.278.7000</a> &nbsp;&nbsp;&nbsp;mailto: info@barnesfoundation.org</div>
+						<div style="height:28px; color: #b8b8b8;"><a href="tel:215-278-7000">Call : 215.278.7000</a> &nbsp;&nbsp;&nbsp;mailto: info@barnesfoundation.org
+						</div>
 					  </td>
 					</tr>
 					<tr>
 					  <td style="text-align: center; vertical-align: middle; padding-top: 10px;" class="footer-info-actions">
 						<div style="height:28px; color: #b8b8b8;">
-						  <a href="https://www.barnesfoundation.org/privacy-policy" style="text-decoration: underline;">Privacy Policy</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-						  <a href="http://www.pages03.net/thebarnesfoundation/EmailPreferences/curate_your_inbox" style="text-decoration: underline;"> Email Preferences</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-						  <a href="http://www.pages03.net/thebarnesfoundation/EmailPreferences/opt-out" style="text-decoration: underline;"> Unsubscribe</a>
+						  <a href="https://www.barnesfoundation.org/privacy-policy" style="text-decoration: underline;">
+							Privacy Policy
+						  </a>
+						  &nbsp;&nbsp;|&nbsp;&nbsp;
+						  <a href="http://www.pages03.net/thebarnesfoundation/EmailPreferences/curate_your_inbox" style="text-decoration: underline;"> 
+							Email Preferences
+						  </a>
+						  &nbsp;&nbsp;|&nbsp;&nbsp;
+						  <a href="http://www.pages03.net/thebarnesfoundation/EmailPreferences/opt-out" style="text-decoration: underline;"> 
+							Unsubscribe
+						  </a>
 						</div>
 					  </td>
 					</tr>
