most of the story email content is working as expected

--- a/server/api/views/templates/StoryEmail/html.ejs
+++ b/server/api/views/templates/StoryEmail/html.ejs
@@ -40,7 +40,7 @@
 									<td width="50%" dir="ltr" class="w100 text-center logos__social-icons"
 										style="text-align: right;">
 										<a href="https://www.facebook.com/barnesfoundation/" target="_blank">
-											<img src="mailer/social_facebook.png" , alt="facebook" width="20px"
+											<img src="mailer/social_facebook.png" alt="facebook" width="20px"
 												height="20px" style="padding: 20px 10px; opacity: 0.8;" />
 										</a>
 										<a href="https://www.instagram.com/barnesfoundation/" target="_blank">
