Refactor EmailForm to be a functional component and minorly upgrade React to 16.8 so we can use hooks

--- a/src/styles/components/_email-form.scss
+++ b/src/styles/components/_email-form.scss
@@ -130,6 +130,10 @@
         line-height: 19px;
         width: 138px;
         margin-bottom: 16px;
+
+        &.with-story {
+            color: #F74E32;
+        }
     }
 
     .email-head {
