--- a/src/styles/components/_artwork.scss
+++ b/src/styles/components/_artwork.scss
@@ -32,7 +32,7 @@
             height: auto !important;
             //overflow: hidden;
             background-color: #fff;
-            border-radius: 24px;
+            border-radius: 24px 24px 0 0;
             z-index: 2;
             padding-top: 2px;
         }
