--- a/src/styles/components/_language-dropdown.scss
+++ b/src/styles/components/_language-dropdown.scss
@@ -49,7 +49,7 @@
 
 .dd-list {
     z-index: 99999 !important;
-    position: absolute;
+    // position: absolute;
     right: 0px;
     width: 130px;
     border: 2px solid rgba(0, 0, 0, 0.12);
