--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -24,3 +24,4 @@
   @import './components/slider';
   @import './components/email-form';
   @import './components/about';
+  @import './components/content-block';
