Try to fix scrollmagic to display all content

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -25,3 +25,4 @@
   @import './components/email-form';
   @import './components/about';
   @import './components/content-block';
+  @import './components/exhibition-obj';
