FOC-54 css typo

--- a/src/styles/components/_content-block.scss
+++ b/src/styles/components/_content-block.scss
@@ -96,7 +96,7 @@
 
 .fade-one {
   opacity: 1;
-  animation: flickerAnimation 5s infinite ease-in-out;
+  animation: fadeAnimation 5s infinite ease-in-out;
 }
 
 @keyframes fadeAnimation {
