--- a/server/api/views/templates/BookmarkEmail/html.ejs
+++ b/server/api/views/templates/BookmarkEmail/html.ejs
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-	link(rel="stylesheet", href="/css/styles.css", data-inline)
+	<link rel="stylesheet", href="/css/styles.css", data-inline>
 </head>
 
 <!--[if (gte mso 9)|(IE)]>
