--- a/src/styles/components/_exhibition-obj.scss
+++ b/src/styles/components/_exhibition-obj.scss
@@ -3,6 +3,7 @@
 
   &__content {
     overflow: scroll;
+    height: 100vh;
 
     &__result {
       margin-bottom: 30vh;
@@ -188,7 +189,7 @@
 
     &__email {
       position: fixed;
-      bottom: -412px;
+      bottom: calc(0vh - calc(390px + env(safe-area-inset-bottom)));
       width: 100vw;
       transition: all .25s ease .1s;
       z-index: 10;
@@ -199,7 +200,7 @@
       }
 
       &.completed {
-        bottom: -355px;
+        bottom: calc(0vh - (345px + env(safe-area-inset-bottom)));
         transition: all .25s ease .1s;
       }
     }
