--- a/src/styles/components/_exhibition-obj.scss
+++ b/src/styles/components/_exhibition-obj.scss
@@ -2,7 +2,8 @@
   height: 100vh;
 
   &__content {
-    overflow: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
     height: 100vh;
     height: var(--doc-height);
 
