--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -26,3 +26,7 @@
   @import './components/about';
   @import './components/content-block';
   @import './components/exhibition-obj';
+
+  // Carousel styling
+  @import "react-alice-carousel/lib/scss/alice-carousel.scss";
+  
