Add hero image and basic styling

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -26,6 +26,7 @@
   @import './components/about';
   @import './components/content-block';
   @import './components/exhibition-obj';
+  @import './components/email';
 
   // Carousel styling
   @import "react-alice-carousel/lib/scss/alice-carousel.scss";
