--- a/src/styles/components/_email.scss
+++ b/src/styles/components/_email.scss
@@ -15,7 +15,7 @@
         left: 30px
       }
     }
-  
+
     &__header {
       text-align: center;
       position: absolute;
@@ -35,17 +35,17 @@
         width: 100%;
         opacity: 1;
         margin-top: 16px;
-  
+
         @media (max-width: 645px) {
           margin-top: 48px;
         }
-  
+
         @media (max-width: 375px) {
           margin-top: 60px;
         }
       }
     }
-  
+
     &__image {
       overflow: hidden;
       max-height: 200px;
@@ -54,24 +54,87 @@
 
       &__content {
         width: 100%;
-    
+
         transition: opacity 1s;
       }
-    
+
       &__overlay {
         position: absolute;
         top: 0;
-    
+
         width: 100%;
         height: 100%;
-    
+
         background-color: #000;
         opacity: 0.2;
-    
+
         transition: opacity 1s;
-    
+
         &:after {
           content: " ";
+        }
+      }
+    }
+  }
+
+  &__content {
+    margin: 40px;
+    width: 80%;
+    max-width: 800px;
+
+    &__social {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+    }
+
+    &__message {
+      margin-bottom: 32px;
+      padding-bottom: 24px;
+      border-bottom: 1px solid #eee;
+
+      &__header {
+        font-size: 40px;
+        line-height: 45px;
+        margin: 30px 0;
+        color: #282828;
+        text-align: start;
+      }
+
+      &__text {
+        font-size: 22px;
+        color: #b6b6b6;
+        margin: 10px 0;
+        max-width: 620px;
+      }
+    }
+
+    &__bookmarks {
+      max-width: 800px;
+      width: 100%;
+      color: #282828;
+      font-size: 18px;
+      display: flex;
+      flex-direction: column;
+
+      &__item {
+        display: flex;
+        flex-direction: row;
+        gap: 32px;
+        
+        justify-content: start;
+        width: 100%;
+        margin-bottom: 32px;
+        padding-bottom: 32px;
+        border-bottom: 1px solid #eee;
+
+        @media (max-width: 645px) {
+         flex-wrap: wrap;
+        }
+
+        &__text {
+          max-width: 620px;
+          width: fit-content;
         }
       }
     }
