--- a/src/styles/components/_email.scss
+++ b/src/styles/components/_email.scss
@@ -1,4 +1,14 @@
 .email {
+  .bottom-border {
+    margin-bottom: 32px;
+    padding-bottom: 24px;
+    border-bottom: 1px solid #eee;
+  }
+
+  .no-wrap {
+    white-space: nowrap;
+  }
+
   &__hero-banner {
     $self: &;
     position: relative;
@@ -77,11 +87,13 @@
     }
   }
 
-  &__content {
+  &__body {
     margin: 40px;
     width: 80%;
     max-width: 800px;
+  }
 
+  &__content {
     &__social {
       display: flex;
       flex-direction: row;
@@ -89,10 +101,6 @@
     }
 
     &__message {
-      margin-bottom: 32px;
-      padding-bottom: 24px;
-      border-bottom: 1px solid #eee;
-
       &__header {
         font-size: 40px;
         line-height: 45px;
@@ -121,21 +129,60 @@
         display: flex;
         flex-direction: row;
         gap: 32px;
-        
+
         justify-content: start;
         width: 100%;
-        margin-bottom: 32px;
-        padding-bottom: 32px;
-        border-bottom: 1px solid #eee;
 
         @media (max-width: 645px) {
-         flex-wrap: wrap;
+          flex-wrap: wrap;
         }
 
         &__text {
           max-width: 620px;
           width: fit-content;
         }
+      }
+    }
+  }
+
+  &__footer {
+    max-width: 800px;
+    width: 100%;
+
+    &__social {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      gap: 32px;
+      flex-wrap: wrap;
+      margin-bottom: 24px;
+    }
+
+    &__links {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      gap: 32px;
+      flex-wrap: wrap;
+      margin-bottom: 24px;
+
+      &__item {
+        font-size: 28px;
+        font-weight: 500;
+      }
+    }
+
+    &__contact {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      &__item {
+        color: #b8b8b8;
+        text-align: center;
       }
     }
   }
