--- a/src/styles/components/_email.scss
+++ b/src/styles/components/_email.scss
@@ -10,15 +10,31 @@
   }
 
   &__hero-banner {
-    $self: &;
     position: relative;
     z-index: 2;
+    height: 200px;
+
+    &__content {
+      height: 100%;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      padding: 20px 40px;
+
+      @media (max-width: 375px) {
+        padding: 20px;
+      }
+
+      &__row {
+        display: flex;
+        flex-direction: row;
+        z-index: 2;
+        justify-content: space-between;
+      }
+    }
 
     &__logo {
       z-index: 2;
-      position: absolute;
-      left: 40px;
-      top: 20px;
 
       @media (max-width: 645px) {
         width: 100px;
@@ -28,7 +44,6 @@
 
     &__header {
       text-align: center;
-      position: absolute;
       z-index: 2;
       display: flex;
       justify-content: center;
@@ -36,6 +51,10 @@
       width: 100%;
       height: 100%;
       padding: 0 20px;
+
+      @media (max-width: 375px) {
+        padding: 0;
+      }
 
       &__h1 {
         font-weight: 700;
@@ -45,14 +64,6 @@
         width: 100%;
         opacity: 1;
         margin-top: 16px;
-
-        @media (max-width: 645px) {
-          margin-top: 48px;
-        }
-
-        @media (max-width: 375px) {
-          margin-top: 60px;
-        }
       }
     }
 
@@ -60,7 +71,10 @@
       overflow: hidden;
       max-height: 200px;
       transition: background-color 1s;
-      position: relative;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
 
       &__content {
         width: 100%;
@@ -98,6 +112,7 @@
       display: flex;
       flex-direction: row;
       justify-content: space-around;
+      gap: 12px;
     }
 
     &__message {
