Use Email component for bookmarks email, fix html nexting error

--- a/src/styles/components/_email.scss
+++ b/src/styles/components/_email.scss
@@ -163,6 +163,11 @@
           max-width: 620px;
           width: fit-content;
         }
+
+        &__title {
+          font-size: 1.75rem;
+          color: #d6421f;
+        }
       }
     }
   }
