--- a/server/api/views/templates/BookmarkEmail/html.ejs
+++ b/server/api/views/templates/BookmarkEmail/html.ejs
@@ -141,6 +141,30 @@
                   </tr>
                 </table>
 
+                  <!-- View email in browser link  -->
+                <table
+                  cellpadding="0"
+                  cellspacing="0"
+                  border="0"
+                  style="width: 100%"
+                >
+                  <tr>
+                    <td align="left" style="text-align: left; padding: 20px 0">
+                      <p
+                        style="font-size: 18px; color: #d6421f; margin: 10px 0; text-decoration: underline;"
+                      >
+                        <a
+                          href=<%=browserLink %>
+                          >View this email in a browser.</a
+                        >
+                      </p>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td style="border-top: 1px solid #eeeeee"></td>
+                  </tr>
+                </table>
+
                 <!-- Welcome and bookmark message -->
                 <table
                   cellpadding="0"
