--- a/server/api/views/templates/StoryEmail/html.ejs
+++ b/server/api/views/templates/StoryEmail/html.ejs
@@ -71,6 +71,30 @@
 				</table>
 				<![endif]-->
 
+							<!-- View email in browser link  -->
+							<table
+								cellpadding="0"
+								cellspacing="0"
+								border="0"
+								style="width: 100%"
+							>
+								<tr>
+									<td align="left" style="text-align: left; padding: 20px 0">
+										<p
+											style="font-size: 18px; color: #d6421f; margin: 10px 0; text-decoration: underline;"
+										>
+											<a
+												href=<%=browserLink %>
+												>View this email in a browser.</a
+											>
+										</p>
+									</td>
+								</tr>
+								<tr>
+									<td style="border-top: 1px solid #eeeeee"></td>
+								</tr>
+							</table>
+
 							<!-- Welcome and bookmark message -->
 							<!--[if (gte mso 9)|(IE)]>
 				<table align="center" border="0" cellspacing="0" cellpadding="0" width="500">
